--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "moongose": "^1.0.0",
+    "needle": "^3.3.1",
     "nodemon": "^3.1.10"
   }
 }
