--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
+    "mongoose": "^8.15.0",
     "moongose": "^1.0.0",
     "needle": "^3.3.1",
     "nodemon": "^3.1.10"
